VSE Render crash when zooming timeline #53686

Closed
opened 2018-01-03 17:14:41 +01:00 by ChristopherAnderssarian · 14 comments

System Information
Windows 7 Ultimate, 64-bit, 32GB, 5960x, Nvidia Quadro FX 1800 (Primary) & GeForce 9800 GTX+ (Secondary)
Graphics Tablet: Wacom Bamboo Model: CTF-430 Driver Version 5.2.4-5

Blender Version
Official release(s) unless specified:
Broken: 2.79 (Windows 64-Bit & Ubuntu Linux (ubuntu-17.10-desktop-amd64) w/ Virtual Box Version 5.2.4 r119785 (Qt5.6.2)), 2.79.0-e59cf13 (Windows 64-Bit)

Worked: (N/A)

Short description of error

When rendering in the Video Sequence Editor Blender crashes if you zoom on the timeline.

vlcsnap-9321-01-10-00h41m46s661.png

Exact steps for others to reproduce the error

Rendering_Crash_VSE.blend

Windows: https://www.youtube.com/watch?v=2cDWGxDbmWo

Ubuntu Linux: https://www.youtube.com/watch?v=pdbQZ3_cxxM

**System Information** Windows 7 Ultimate, 64-bit, 32GB, 5960x, Nvidia Quadro FX 1800 (Primary) & GeForce 9800 GTX+ (Secondary) Graphics Tablet: Wacom Bamboo Model: CTF-430 Driver Version 5.2.4-5 **Blender Version** Official release(s) unless specified: Broken: 2.79 (Windows 64-Bit & Ubuntu Linux (ubuntu-17.10-desktop-amd64) w/ Virtual Box Version 5.2.4 r119785 (Qt5.6.2)), 2.79.0-e59cf13 (Windows 64-Bit) Worked: (N/A) **Short description of error** When rendering in the Video Sequence Editor Blender crashes if you zoom on the timeline. ![vlcsnap-9321-01-10-00h41m46s661.png](https://archive.blender.org/developer/F1678744/vlcsnap-9321-01-10-00h41m46s661.png) **Exact steps for others to reproduce the error** [Rendering_Crash_VSE.blend](https://archive.blender.org/developer/F1678977/Rendering_Crash_VSE.blend) Windows: https://www.youtube.com/watch?v=2cDWGxDbmWo Ubuntu Linux: https://www.youtube.com/watch?v=pdbQZ3_cxxM

Added subscriber: @ChristopherAnderssarian

Added subscriber: @ChristopherAnderssarian
ChristopherAnderssarian changed title from VSE Render crash when Zooming timeline to VSE Render crash when zooming timeline 2018-01-03 17:15:23 +01:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2018-01-03 18:32:14 +01:00
Member

Can confirm this (apparently only happening with mousewheel zoom), will look into it shortly...

Can confirm this (apparently only happening with mousewheel zoom), will look into it shortly...
Member

... and apparently only happening with a Text Strip rendering (no Sequencer preview window has to be open for this even), crash happening in font handling

1   BLI_addhead                  listbase.c        77   0x2deda1e      
2   blf_glyph_add                blf_glyph.c       313  0x337b632      
3   blf_font_ensure_ascii_table  blf_font.c        125  0x3377c20      
4   blf_font_wrap_apply          blf_font.c        669  0x3379866      
5   blf_font_boundbox__wrap      blf_font.c        767  0x3379d48      
6   BLF_boundbox_ex              blf.c             669  0x3376ab0      
7   do_text_effect               seqeffects.c      3519 0x2af6d53      
8   seq_render_effect_strip_impl sequencer.c       2769 0x2b029dd      
9   do_render_strip_uncached     sequencer.c       3533 0x2b05036      
10  seq_render_strip             sequencer.c       3614 0x2b053ed      
11  seq_render_strip_stack       sequencer.c       3766 0x2b059d1      
12  BKE_sequencer_give_ibuf      sequencer.c       3883 0x2b05f52      
13  do_render_seq                pipeline.c        2740 0x22cd480      
14  do_render_all_options        pipeline.c        2830 0x22cd978      
15  RE_BlenderAnim               pipeline.c        3762 0x22d08b9      
16  render_startjob              render_internal.c 604  0x21b0a9d      
17  do_job_thread                wm_jobs.c         337  0x1c43c44      
18  tslot_thread_start           threads.c         253  0x2e41f25      
19  start_thread                                        0x7ffff095a609 
20  clone                                               0x7ffff0483e6f 
... <More>  
... and apparently only happening with a **Text** Strip rendering (no Sequencer preview window has to be open for this even), crash happening in font handling ``` 1 BLI_addhead listbase.c 77 0x2deda1e 2 blf_glyph_add blf_glyph.c 313 0x337b632 3 blf_font_ensure_ascii_table blf_font.c 125 0x3377c20 4 blf_font_wrap_apply blf_font.c 669 0x3379866 5 blf_font_boundbox__wrap blf_font.c 767 0x3379d48 6 BLF_boundbox_ex blf.c 669 0x3376ab0 7 do_text_effect seqeffects.c 3519 0x2af6d53 8 seq_render_effect_strip_impl sequencer.c 2769 0x2b029dd 9 do_render_strip_uncached sequencer.c 3533 0x2b05036 10 seq_render_strip sequencer.c 3614 0x2b053ed 11 seq_render_strip_stack sequencer.c 3766 0x2b059d1 12 BKE_sequencer_give_ibuf sequencer.c 3883 0x2b05f52 13 do_render_seq pipeline.c 2740 0x22cd480 14 do_render_all_options pipeline.c 2830 0x22cd978 15 RE_BlenderAnim pipeline.c 3762 0x22d08b9 16 render_startjob render_internal.c 604 0x21b0a9d 17 do_job_thread wm_jobs.c 337 0x1c43c44 18 tslot_thread_start threads.c 253 0x2e41f25 19 start_thread 0x7ffff095a609 20 clone 0x7ffff0483e6f ... <More> ```
Philipp Oeser removed their assignment 2018-01-23 21:38:04 +01:00
Member

hm, seems like font->glyph_cache is cleared by UI_view2d_zoom_cache_reset() somewhere inbetween setting it up in do_text_effect BLF_size and actually needing it later in blf_glyph_add
Not sure if there is a good way to lock here? Or just recreate it on the fly [in the case it was cleared]?

hm, seems like `font->glyph_cache` is cleared by `UI_view2d_zoom_cache_reset()` somewhere inbetween setting it up in `do_text_effect` `BLF_size` and actually needing it later in `blf_glyph_add` Not sure if there is a good way to lock here? Or just recreate it on the fly [in the case it was cleared]?
Sergey Sharybin was assigned by Philipp Oeser 2018-01-24 16:22:11 +01:00
Member

Added subscribers: @Sergey, @brecht

Added subscribers: @Sergey, @brecht
Member

@brecht, @Sergey, maybe you can have a look?

@brecht, @Sergey, maybe you can have a look?

This issue was referenced by 0bf54dd66b

This issue was referenced by 0bf54dd66be97132291c872fae5be32d738f0eb9

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @mont29

Added subscriber: @mont29

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Wrong commit message, sorry!

Wrong commit message, sorry!

This issue was referenced by 7884ae6eb2

This issue was referenced by 7884ae6eb274bea0fe4739255a41a693df833b11

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53686
No description provided.